# BahnMap

./: README.md
data_collection/: Cargo.toml  result.json  stations.json
data_collection/data/: 8011160.json
data_collection/src/: evaluate.rs  filter_stations.rs  main.rs  server.rs
images/: crop.sh
map/: index.html  result.json  script.js
