[package]
name = "data_collection"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
simple_logger = "4.3.3"

[dependencies.reqwest]
version = "0.12.4"
features = ["blocking", "json"]
